# project_gym

./: .gitattributes  .gitignore  README.md  deploy_ssh.sh  docker-compose.yml
.github/workflows/: main.yml
analysis/: EDA.ipynb
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py
frontend/: Dockerfile  front.py  pyproject.toml
local-demo/backend/: Dockerfile  README.md  requirements.txt
local-demo/backend/app/: __main__.py  config.json  main.py
local-demo/frontend/: Dockerfile  README.md  config.json  front.py  requirements.txt
page/: Dockerfile  README.md  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  requirements.txt
page/app/: config.json  config.py  crud.py  database.py  db.py  hashing.py  main.py  models.py  schemas.py
page/app/routers/: collect.py  signin.py  signup.py
page/front/: home.html  index.html  login.html  signin.html  signup.html
page/front/static/css/: home.css  login.css
page/front/static/js/: home.js  login.js  signin.js  signup.js
